Fix welcome text spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,19 +302,19 @@ textarea .placeholder {
   /*background-image: url("../images/ladybird-200.jpeg");*/
   border: 2px solid #f9c74f;
   background-color:  rgba(67, 131, 151, 0.9);
-  font-size: 12px;
+  font-size: 14px;
   font-family: "Spectral SC", sans-serif;
   font-weight:700;
   margin-top:25px;
 }
 .welcome-text {
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .welcome-content p{
     margin: 0px 0px 0px 0px;
     padding: 0;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 /*-------------------------------------------------------------------Footer*/
